# kollagen

./: .build_helper.sh  .build_script.sh  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  setup.py
benchmark-datasets/: Multi3500x8.tum
benchmark-datasets/Multi10000x5/agent1/: agent1_GT.tum
benchmark-datasets/Multi10000x5/agent2/: agent2_GT.tum
benchmark-datasets/Multi10000x5/agent3/: agent3_GT.tum
benchmark-datasets/Multi3500x8/agent2/: agent2_GT.tum
benchmark-datasets/Multi3500x8/agent3/: agent3_GT.tum  posegraph.g2o
benchmark-datasets/Multi3500x8/agent4/: agent4_GT.tum  posegraph.g2o
benchmark-datasets/Multi3500x8/agent5/: agent5_GT.tum
benchmark-datasets/Multi3500x8/agent7/: agent7_GT.tum
data/: Multi10000x5.json  Multi3500x8.json  example.json
doc/: information-matrix-derivation.html  information-matrix-derivation.rmd
example-datasets/: Multi10000x5_GT.tum  Multi3500x8_GT.tum
example-datasets/Multi10000x5/agent4/: agent4_GT.tum
example-datasets/Multi10000x5/agent5/: agent5_GT.tum
example-datasets/Multi3500x8/agent1/: agent1_GT.tum  posegraph.g2o
example-datasets/Multi3500x8/agent2/: posegraph.g2o
example-datasets/Multi3500x8/agent5/: posegraph.g2o
example-datasets/Multi3500x8/agent6/: agent6_GT.tum  posegraph.g2o
example-datasets/Multi3500x8/agent7/: posegraph.g2o
example-datasets/Multi3500x8/agent8/: agent8_GT.tum  posegraph.g2o
examples/: example.cpp  iSAM2example.cpp  timing.cpp
examples/data/: example.json  iSAM2example.json
include/: AgentParams.h  DataGenerator.h  DataGeneratorParams.h  DiscreteCircle.h  Functions.h  InterLCParams.h  LCParams.h  Loopclosure.h  MultiLoopclosure.h  Point.h  RNGenerator.h  Walker-impl.h  Walker.h  WalkerParams.h  json_parse.h  kollagen.h  utils.hpp
include/kollagen/: AgentParams.h  DataGenerator.h  DataGeneratorParams.h  DiscreteCircle.h  Functions.h  InterLCParams.h  JsonParse.h  LCParams.h  Loopclosure.h  MultiG2oParse.h  MultiLoopclosure.h  Point.h  RNGenerator.h  Walker-impl.h  Walker.h  WalkerParams.h  generate.h  utils.hpp
output/: .gitignore
python/: animate.py  ericsson.mplstyle  plot.py  plotAPE.py  plot_timing.py  style.py
python/pykollagen/: pykollagen.cpp  pykollagen.py
src/: example.cpp  generate.cpp  iSAM2example.cpp  timing.cpp
tests/: CMakeLists.txt  DataGeneratorAttorney.h  testDataGenerator.cpp  testJSONParse.cpp  testMultiG2oParse.cpp  testWalker.cpp
tests/test_data/: test.json  test2.json  walker1.g2o  walker1.tum  walker1_3D.g2o  walker2.g2o  walker2.tum  walker2_3D.g2o
tests/test_data/multig2o_test/agent1/: agent1_GT.tum  posegraph.g2o
tests/test_data/multig2o_test/agent2/: agent2_GT.tum  posegraph.g2o
tests/test_data/multig2o_test_3D/agent1/: agent1_GT.tum  posegraph.g2o
tests/test_data/multig2o_test_3D/agent2/: agent2_GT.tum  posegraph.g2o
